
	* bin/cygbuild.sh
	-- Relocate massive amount of functions to libcheck.sh.
	(CygbuildCmdInstallCheckMain): Rewritten. Move
	logic to `CygbuildCmdInstallCheckEverything'.
	(CygbuildInstallFixInterpreterMain): At beginning, chnage incorrect
	variable debinition pybin to `rbbin'. This error caused all
	python file to have ruby interpreters.

2008-03-28  Jari Aalto  <jari.aalto@cante.net>

	* etc/template/Makefile.tmp (BINDIR): Remove extra /bin.

2008-03-18  Jari Aalto  <jari.aalto@cante.net>

	* bin/cygbuild.sh: (CygbuildCmdStripMain): Use plain find,
	which is faster. Convert for-loop to while loop. Change
	Support filenames with spaces.
	(CygbuildStripCheck): All -L to find.

2008-03-17  Jari Aalto  <jari.aalto@cante.net>

	* bin/cygbuild.sh: (CygbuildCmdDownloadCygwinPackage): Return
	error code instead of die if cannot download.
	(CygbuildCommandMainCheckSpecial): Remove created directory
	if download failed.

2008-03-14  Jari Aalto  <jari.aalto@cante.net>

	* etc/lib/cygbuild.pl: (HELP::Patch management commands):
	Document new command [patch-list].

	* bin/cygbuild.sh (CygbuildPerlLibraryList): Remove var SORT.
	(CygbuildObjDumpLibraryDepList): Remove var SORT.
	(CygbuildCygcheckLibraryDepListFull): Remove var SORT.
	(CygbuildCygcheckLibraryDepMain): Show also objdump results.
	(CygbuildDefineGlobalCommands): Define GPGOPT.
	(CygbuildGPGsignFiles): Use GPGOPT.
	(CygbuildGPGverify): Use GPGOPT.
	(CygbuildDllToLibName): new.
	(CygbuildCygcheckLibraryDepMain): Use objdump result and
	`CygbuildDllToLibName'.
	(CygbuildPatchFileList): Was CygbuildPatchList.
	(CygbuildFindLowlevel): New.
	(CygbuildPatchFileList): Use CygbuildFindLowlevel
	(CygbuildCommandMainCheckSpecial): New command [patch-list].
	(CygbuildCygcheckLibraryDepMain): Adjust objdump handling.
	(CygbuildDefineGlobalCommands): Move prefix of perl, python
	and ruby from /usr/bin to /bin.

2008-03-13  Jari Aalto  <jari.aalto@cante.net>

	* bin/cygbuild.sh: